<resources>
    <string name="app_name">Passlocker</string>

    <!-- demo -->
    <string name="text_demo_name">Harshal vyas</string>
    <string name="text_demo_welcome">Welcome Harshal Vyas</string>
    <string name="text_demo_remark">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <!--Common -->
    <string name="text_submit">Submit</string>
    <string name="text_title">Title</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_remark">Remark</string>
    <string name="text_search">Search…</string>
    <string name="text_common_error">Oops! Something went wrong</string>
    <string name="text_no_data_error">Oops! No Data Found</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_alert">Alert</string>

    <!-- home screen -->
    <string name="text_welcome">Welcome!</string>
    <string name="text_passlist">Passlist</string>
    <string name="text_category">Category</string>
    <string name="text_no_data">No Data Found</string>
    <string name="text_loading">Loading…</string>
    <string name="text_manage_cat">Manage Categories</string>
    <string name="text_category_delete_title">Delete %s Category?</string>
    <string name="text_category_delete_message">This will delete all Credential of %s Category.</string>
    <string name="text_item_marked_fav">Credential Added Favourite</string>
    <string name="text_item_unmarked_fav">Credential Removed Favourite</string>
    <string name="text_credential_deleted_msg">Credential Deleted Successfully</string>
    <string name="text_credential_delete_dialog_message">Are you sure? You want to delete %s.</string>
    <string name="text_please_add_category">Please add at lease one Category before adding Credential </string>


    <!-- login screen -->
    <string name="text_enter_name">Please enter your name</string>
    <string name="text_register">Click here to register after entering name</string>
    <string name="text_name_error">Please enter valid name</string>
    <string name="text_login_touch_id">Please Login using Touch ID</string>
    <string name="text_verify_identity">Verify Your Identity</string>
    <string name="text_exit_app">Exit App</string>
    <string name="error_no_finger_print">Please add a fingerprint in settings</string>

    <!--Add Category-->
    <string name="text_add_category">Add Category</string>
    <string name="text_update_category">Update Category</string>
    <string name="text_category_name">Category Name</string>
    <string name="text_position">Position</string>
    <string name="text_category_error">Please enter valid category name</string>
    <string name="text_position_error">Please enter valid position</string>
    <string name="text_category_added">Category added successfully</string>
    <string name="text_category_updated">Category updated successfully</string>

    <!--Add credentials-->
    <string name="text_add_credentials">Add Credentials</string>
    <string name="text_update_credentials">Update Credentials</string>
    <string name="text_credential_added">Credential added successfully</string>
    <string name="text_credential_updated">Credential updated successfully</string>
    <string name="text_select_category">Select Category</string>
    <string name="text_credential_title_error">Please enter valid title</string>
    <string name="text_credential_username_error">Please enter valid username</string>


</resources>