<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    tools:context=".presentation.login_screen.LoginActivity">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/login_app_icon_size"
        android:layout_height="@dimen/login_app_icon_size"
        android:layout_marginTop="@dimen/margin_16"
        android:scaleType="centerInside"
        android:src="@drawable/ic_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:fontFamily="@font/avenir_next_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_big_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon" />

    <EditText
        android:id="@+id/et_enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:fontFamily="@font/avenir_next_medium"
        android:gravity="center"
        android:hint="@string/text_enter_name"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textSize="@dimen/text_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

    <LinearLayout
        android:id="@+id/ll_login_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-52dp"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:gravity="center"
            android:text="@string/text_demo_welcome"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_title" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_negative_up"
            android:gravity="center"
            android:text="@string/text_login_touch_id"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/text_normal"
            app:layout_constraintEnd_toEndOf="@id/tv_welcome"
            app:layout_constraintStart_toStartOf="@id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    </LinearLayout>


    <ImageView
        android:id="@+id/iv_bio"
        android:layout_width="@dimen/finger_print_icon_size"
        android:layout_height="@dimen/finger_print_icon_size"
        android:layout_marginBottom="-32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_finger_print_svg"
        app:layout_constraintBottom_toTopOf="@id/tv_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_register"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>