<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.add_category.AddUpdateCategoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:text="@string/text_add_credentials"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_big" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:clipToPadding="false"
        android:padding="@dimen/padding_16"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/ll_form_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_label_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_medium"
                android:text="@string/text_select_category"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <LinearLayout
                android:id="@+id/ll_category_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2"
                android:orientation="horizontal" />


            <TextView
                android:id="@+id/tv_label_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_medium"
                android:text="@string/text_title"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="@dimen/padding_16"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_normal"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/tv_label_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/avenir_next_medium"
                android:text="@string/text_username"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="@dimen/padding_16"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_normal"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_label_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/avenir_next_medium"
                android:text="@string/text_password"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="@dimen/padding_16"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_normal"
                tools:ignore="LabelFor,TextFields" />


            <TextView
                android:id="@+id/tv_label_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/avenir_next_medium"
                android:text="@string/text_remark"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <EditText
                android:id="@+id/et_remark"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="@dimen/margin_2"
                android:gravity="start"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="@dimen/padding_16"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_normal"
                tools:ignore="LabelFor,TextFields" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_bottom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/padding_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_submit"
            style="@style/Passlocker.Primary.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_submit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>