<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.add_category.AddCategoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:text="@string/text_add_category"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_big" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:clipToPadding="false"
        android:padding="@dimen/padding_16"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/ll_form_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_label_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_category_name"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <EditText
                android:id="@+id/et_cat_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:padding="@dimen/padding_16"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_normal"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/tv_label_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/text_position"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <EditText
                android:id="@+id/et_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="@dimen/padding_16"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_normal"
                tools:ignore="LabelFor" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_bottom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/padding_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_submit"
            style="@style/Passlocker.Primary.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_submit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>