<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_16"
    app:cardBackgroundColor="@color/surfaceColor"
    app:cardCornerRadius="@dimen/corner_radius_12"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="@dimen/padding_12">

        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/avenir_next_demi_bold"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_normal"
                tools:text="@string/text_title" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/avenir_next_medium"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_normal"
                tools:text="@string/text_username" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/avenir_next_medium"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_normal"
                tools:text="@string/text_password" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/divider_width"
            android:layout_height="@dimen/zero"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_12"
            android:background="@drawable/divider_bg"
            app:layout_constraintBottom_toBottomOf="@id/ll_info"
            app:layout_constraintEnd_toStartOf="@id/ll_action"
            app:layout_constraintStart_toEndOf="@id/ll_info"
            app:layout_constraintTop_toTopOf="@id/ll_info" />

        <LinearLayout
            android:id="@+id/ll_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/ll_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toTopOf="@id/ll_info">

            <ImageView
                android:id="@+id/iv_fav"
                android:layout_width="@dimen/item_action_button_size"
                android:layout_height="@dimen/item_action_button_size"
                android:background="@drawable/action_button_bg"
                android:padding="@dimen/padding_4"
                android:src="@drawable/ic_star"
                tools:ignore="ContentDescription" />


            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="@dimen/item_action_button_size"
                android:layout_height="@dimen/item_action_button_size"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@drawable/delete_button_bg"
                android:padding="@dimen/padding_4"
                android:src="@drawable/ic_delete_item"
                tools:ignore="ContentDescription" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@android:color/transparent"
            android:fontFamily="@font/avenir_next_medium"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_action"
            tools:text="@string/text_demo_remark" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>